<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.LoginActivity">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <include layout="@layout/layout_app_header" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/header"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/worksans_bold"
                    android:includeFontPadding="false"
                    android:text="@string/log_in_here"
                    android:textSize="@dimen/_14sdp" />

                <EditText
                    android:id="@+id/et_username"
                    style="@style/loginFormField"
                    android:hint="@string/username"
                    android:imeOptions="actionNext" />

                <EditText
                    android:id="@+id/et_password"
                    style="@style/loginFormField"
                    android:hint="@string/password"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword" />

                <Button
                    android:id="@+id/btn_login"
                    style="@style/loginFormField"
                    android:background="@drawable/black_corner_backgroud"
                    android:fontFamily="@font/worksans_bold"
                    android:text="@string/login"
                    android:textColor="@color/white" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_change_url"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginStart="@dimen/_26sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:layout_marginEnd="@dimen/_26sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:fontFamily="@font/worksans_medium"
                    android:includeFontPadding="false"
                    android:padding="@dimen/_4sdp"
                    android:text="@string/log_in_change_url"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14sdp" />
            </LinearLayout>

        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>