<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <include
                android:id="@+id/view_header"
                layout="@layout/layout_app_header" />

            <TextView
                android:id="@+id/tv_thank_msg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/view_header"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/worksans_bold"
                android:gravity="center"
                android:includeFontPadding="false"
                android:text="@string/thank_you_for_your_order"
                android:textColor="@color/black"
                android:textSize="@dimen/_14sdp" />

            <LinearLayout
                android:id="@+id/view_order"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_thank_msg"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_order_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="@font/worksans_bold"
                    android:gravity="center"
                    android:includeFontPadding="false"
                    android:text="@string/blank"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14sdp" />

                <TextView
                    android:id="@+id/tv_order_details"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/worksans_bold"
                    android:gravity="center"
                    android:includeFontPadding="false"
                    android:text="@string/order_details"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14sdp" />

            </LinearLayout>

            <TextView
                android:id="@+id/tv_msg_confirmation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/worksans_bold"
                android:gravity="center"
                android:includeFontPadding="false"
                android:text="@string/msg_email_confirmation"
                android:textColor="@color/black"
                android:textSize="@dimen/_14sdp" />

            <LinearLayout
                android:id="@+id/ll_amount_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/tv_msg_confirmation"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:orientation="vertical"
                android:paddingStart="5dp"
                android:paddingEnd="5dp">

                <View style="@style/line_divider" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_4sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:layout_marginEnd="@dimen/_4sdp"
                    android:layout_marginBottom="@dimen/_1sdp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:fontFamily="@font/worksans_bold"
                        android:text="@string/subtotal"
                        android:textSize="@dimen/_12sdp" />

                    <TextView
                        android:id="@+id/tv_sub_total"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:fontFamily="@font/worksans_medium"
                        android:text="@string/blank"
                        android:textColor="@color/light_gray"
                        android:textSize="@dimen/_12sdp" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_4sdp"
                    android:layout_marginTop="@dimen/_1sdp"
                    android:layout_marginEnd="@dimen/_4sdp"
                    android:layout_marginBottom="@dimen/_8sdp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:fontFamily="@font/worksans_bold"
                        android:text="@string/taxes"
                        android:textSize="@dimen/_12sdp" />

                    <TextView
                        android:id="@+id/tv_tax_amount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:fontFamily="@font/worksans_medium"
                        android:text="@string/blank"
                        android:textColor="@color/light_gray"
                        android:textSize="@dimen/_12sdp" />
                </RelativeLayout>

                <View style="@style/line_divider" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_4sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:layout_marginEnd="@dimen/_4sdp"
                    android:layout_marginBottom="@dimen/_4sdp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:fontFamily="@font/worksans_bold"
                        android:text="@string/total"
                        android:textSize="@dimen/_14sdp" />

                    <TextView
                        android:id="@+id/tv_total"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:fontFamily="@font/worksans_medium"
                        android:text="@string/blank"
                        android:textColor="@color/gray"
                        android:textSize="@dimen/_14sdp" />
                </RelativeLayout>

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_confirm_product"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/ll_amount_info"
                android:layout_below="@+id/view_order"
                android:layout_marginTop="10dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>