<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/view_header"
            layout="@layout/layout_app_header_with_back" />

        <LinearLayout
            android:background="@color/black"
            android:layout_below="@+id/view_header"
            android:gravity="center"
            android:id="@+id/ll_company_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_company_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/worksans_bold"
                android:gravity="center"
                android:includeFontPadding="false"
                android:text="@string/blank"
                android:textColor="@color/white"
                android:textSize="@dimen/_14sdp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_scan_barcode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ll_company_name"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center">

            <TextView
                android:id="@+id/tv_scan_barcode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|end|top"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/worksans_bold"
                android:gravity="center"
                android:includeFontPadding="false"
                android:text="@string/scan_to_add_products"
                android:textColor="@color/black"
                android:textSize="@dimen/_14sdp" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/view_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="20dp">

            <LinearLayout
                android:id="@+id/ll_quotation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true">

                <TextView
                    android:id="@+id/tv_ask_quotation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/black_corner_backgroud"
                    android:fontFamily="@font/worksans_bold"
                    android:gravity="center"
                    android:includeFontPadding="false"
                    android:minWidth="120dp"
                    android:padding="15dp"
                    android:text="@string/ask_quotation"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_14sdp" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/ll_buy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/black_corner_backgroud"
                    android:fontFamily="@font/worksans_bold"
                    android:gravity="center"
                    android:includeFontPadding="false"
                    android:minWidth="120dp"
                    android:padding="15dp"
                    android:text="@string/buy"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_14sdp" />
            </LinearLayout>


        </RelativeLayout>

        <LinearLayout
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:orientation="vertical"
            android:id="@+id/ll_amount_info"
            android:layout_above="@+id/view_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <View style="@style/line_divider"/>

            <RelativeLayout
                android:layout_marginStart="@dimen/_4sdp"
                android:layout_marginEnd="@dimen/_4sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginBottom="@dimen/_1sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textSize="@dimen/_12sdp"
                    android:layout_alignParentStart="true"
                    android:text="@string/subtotal"
                    android:fontFamily="@font/worksans_bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:textSize="@dimen/_12sdp"
                    android:id="@+id/tv_sub_total"
                    android:layout_alignParentEnd="true"
                    android:text="@string/blank"
                    android:fontFamily="@font/worksans_medium"
                    android:textColor="@color/light_gray"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_marginStart="@dimen/_4sdp"
                android:layout_marginEnd="@dimen/_4sdp"
                android:layout_marginTop="@dimen/_1sdp"
                android:layout_marginBottom="@dimen/_8sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textSize="@dimen/_12sdp"
                    android:layout_alignParentStart="true"
                    android:text="@string/taxes"
                    android:fontFamily="@font/worksans_bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:textSize="@dimen/_12sdp"
                    android:id="@+id/tv_tax_amount"
                    android:layout_alignParentEnd="true"
                    android:text="@string/blank"
                    android:textColor="@color/light_gray"
                    android:fontFamily="@font/worksans_medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </RelativeLayout>

            <View style="@style/line_divider"/>

            <RelativeLayout
                android:layout_marginStart="@dimen/_4sdp"
                android:layout_marginEnd="@dimen/_4sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginBottom="@dimen/_4sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textSize="@dimen/_14sdp"
                    android:layout_alignParentStart="true"
                    android:text="@string/total"
                    android:fontFamily="@font/worksans_bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:textSize="@dimen/_14sdp"
                    android:id="@+id/tv_total"
                    android:layout_alignParentEnd="true"
                    android:text="@string/blank"
                    android:textColor="@color/gray"
                    android:fontFamily="@font/worksans_medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </RelativeLayout>

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_products"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/ll_amount_info"
            android:layout_below="@+id/ll_scan_barcode"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>